--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "install": "^0.13.0",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
+    "next-extra": "^0.5.0",
     "next-themes": "^0.3.0",
     "npm": "^10.8.2",
     "react": "^18",
