--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.7",
+    "formik": "^2.4.6",
     "input-otp": "^1.2.4",
     "install": "^0.13.0",
     "lucide-react": "^0.414.0",
@@ -59,6 +60,7 @@
     "react": "^18",
     "react-day-picker": "^9.0.1",
     "react-dom": "^18",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.52.1",
     "react-resizable-panels": "^2.0.22",
     "react-responsive-carousel": "^3.2.23",
