--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next": "14.2.5",
     "next-extra": "^0.5.0",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
     "npm": "^10.8.2",
     "react": "^18",
     "react-day-picker": "^9.0.1",
